fix PIRATE-3917, logo gets cut off in login page

--- a/less/theme.less
+++ b/less/theme.less
@@ -641,14 +641,14 @@ section  .get-started {
     -ms-flex-pack: center;
     justify-content: center;
 
-    height: 100vh;
+    height: auto;
 
 
     // Logo
     // ----------
 
     .logo {
-        margin: 0 auto;
+        margin: 3em auto 0;
     }
 
 
@@ -685,6 +685,7 @@ section  .get-started {
     }
 }
 
+.bk-pt-form,
 .login-bg,
 .signup-bg {
     background-color: @black;
